# bardazzi_laboratorio

./: CMakeLists.txt  Collection.cpp  Collection.h  Important.cpp  Important.h  Note.cpp  Note.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
Google_tests/: CMakeLists.txt  CollectionTest.cpp  ImportantTest.cpp  NoteTest.cpp  runAllTests.cpp
